--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -40,7 +40,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:scaleType="fitCenter"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="200dp"
         android:contentDescription="NPC Image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,129 +82,18 @@
                 android:layout_height="wrap_content"
                 android:padding="16dp">
 
-                <FrameLayout
-                    android:id="@+id/stats_frame1"
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="@drawable/home_frames"
-                    app:layout_constraintEnd_toStartOf="@id/stats_frame2"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.48">
-
-                    <TextView
-                        android:id="@+id/npc_hp"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:fontFamily="@font/andy_bold"
-                        android:textAlignment="textEnd"
-                        android:layout_marginEnd="30dp"
-                        android:textColor="@color/white"
-                        android:textSize="30sp" />
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="start"
-                        android:src="@drawable/npc_health" />
-                </FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/stats_frame2"
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="8dp"
-                    android:background="@drawable/home_frames"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/stats_frame1"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.48">
-
-                    <TextView
-                        android:id="@+id/npc_defense"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:fontFamily="@font/andy_bold"
-                        android:textAlignment="textEnd"
-                        android:layout_marginEnd="30dp"
-                        android:textColor="@color/white"
-                        android:textSize="30sp" />
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="start"
-                        android:src="@drawable/npc_defense" />
-                </FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/stats_frame3"
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="30dp"
-                    android:background="@drawable/home_frames"
-                    app:layout_constraintEnd_toStartOf="@id/stats_frame4"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/stats_frame1"
-                    app:layout_constraintWidth_percent="0.48">
-
-                    <TextView
-                        android:id="@+id/npc_attack"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:fontFamily="@font/andy_bold"
-                        android:textAlignment="textEnd"
-                        android:layout_marginEnd="30dp"
-                        android:textColor="@color/white"
-                        android:textSize="30sp" />
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="start"
-                        android:src="@drawable/npc_attack" />
-                </FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/stats_frame4"
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="30dp"
-                    android:background="@drawable/home_frames"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/stats_frame3"
-                    app:layout_constraintTop_toBottomOf="@id/stats_frame2"
-                    app:layout_constraintWidth_percent="0.48">
-
-                    <TextView
-                        android:id="@+id/npc_knockback"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:fontFamily="@font/andy_bold"
-                        android:textAlignment="textEnd"
-                        android:layout_marginEnd="30dp"
-                        android:textColor="@color/white"
-                        android:textSize="30sp" />
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="start"
-                        android:src="@drawable/npc_knockback" />
-                </FrameLayout>
-
                 <TextView
                     android:id="@+id/drops_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Drops"
+                    android:fontFamily="@font/andy_bold"
+                    android:text="Recipes"
                     android:textColor="@color/white"
                     android:textSize="30sp"
                     android:textStyle="bold"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/andy_bold"
-                    app:layout_constraintTop_toBottomOf="@id/stats_frame3"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <LinearLayout
                     android:id="@+id/drops_layout"
@@ -302,6 +191,8 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
