--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -104,7 +104,7 @@
                     android:padding="10dp" />
 
                 <ImageView
-                    android:id="@+id/cats_chest"
+                    android:id="@+id/cats_body"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:src="@drawable/item_cat_bodyarmour"
