--- a/app/src/main/res/layout/beastiary.xml
+++ b/app/src/main/res/layout/beastiary.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/beastiary_intro"
+        android:id="@+id/checklist_intro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
@@ -29,7 +29,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/beastiary_intro"
+        app:layout_constraintTop_toBottomOf="@id/checklist_intro"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/button_frame"
