--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,33 @@
         android:layout_marginTop="0dp"
         android:scaleType="fitXY"
         android:contentDescription="Background"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/background_forest" />
 
+    <FrameLayout
+        android:id="@+id/player_frame_wrapper"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:background="@android:color/transparent"
+        app:layout_constraintTop_toTopOf="@id/main_background"
+        app:layout_constraintBottom_toBottomOf="@id/main_background"
+        app:layout_constraintStart_toStartOf="@id/main_background"
+        app:layout_constraintEnd_toEndOf="@id/main_background">
+
+        <FrameLayout
+            android:id="@+id/player_frame"
+            android:layout_width="350dp"
+            android:layout_height="300dp"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:background="@android:color/transparent"/>
+    </FrameLayout>
 
     <FrameLayout
         android:layout_width="150dp"
@@ -29,7 +51,6 @@
         android:layout_marginTop="38dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="30dp">
-
 
         <ProgressBar
             android:id="@+id/health_bar"
@@ -82,7 +103,6 @@
             android:layout_gravity="center"/>
 
     </FrameLayout>
-
 
     <ScrollView
         android:layout_width="match_parent"
