--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -221,10 +221,12 @@
 
                 <ImageView
                     android:layout_width="100dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="20dp"
                     android:layout_gravity="end"
-                    android:src="@drawable/shield_icon"/>
+                    android:src="@drawable/ironskin_potion"/>
             </FrameLayout>
 
             <FrameLayout
