--- a/app/src/main/res/layout/potion_loadout.xml
+++ b/app/src/main/res/layout/potion_loadout.xml
@@ -44,13 +44,14 @@
             android:id="@+id/scroll_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
             android:fillViewport="true">
 
             <GridLayout
                 android:id="@+id/loadout_grid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:columnCount="2"
+                android:columnCount="3"
                 android:orientation="horizontal"
                 android:padding="16dp"
                 android:layout_gravity="center" />
