--- a/app/src/main/res/layout/beastiary.xml
+++ b/app/src/main/res/layout/beastiary.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/checklist_intro"
+        android:id="@+id/beastiary_intro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
@@ -24,12 +24,42 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <EditText
+        android:id="@+id/search_bar"
+        android:layout_width="270dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="70dp"
+        android:background="#C5C4C4"
+        android:ems="10"
+        android:inputType="text"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/beastiary_intro"
+        app:layout_constraintBottom_toTopOf="@id/npc_scroll"/>
 
+    <ImageButton
+        android:id="@+id/clear_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="25dp"
+        android:background="@color/green"
+        android:src="@android:drawable/ic_menu_close_clear_cancel"
+        android:contentDescription="Clear"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/search_bar"
+        app:layout_constraintBottom_toBottomOf="@id/search_bar" />
 
     <ScrollView
+        android:id="@+id/npc_scroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/checklist_intro"
+        app:layout_constraintTop_toBottomOf="@id/search_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/button_frame"
@@ -38,6 +68,12 @@
         android:paddingTop="50dp"
         android:paddingBottom="25dp"
         android:layout_marginBottom="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
         <GridLayout
             android:id="@+id/beastiary_grid"
@@ -49,9 +85,9 @@
             android:layout_gravity="center"
             android:orientation="horizontal"/>
 
+        </LinearLayout>
+
     </ScrollView>
-
-
 
     <FrameLayout
         android:id="@+id/button_frame"
@@ -72,6 +108,18 @@
             android:minHeight="0dp"
             android:minWidth="0dp"
             android:includeFontPadding="false"
+            android:backgroundTint="#185502"
+            />
+
+        <Button
+            android:id="@+id/center_button"
+            android:layout_width="120dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:textSize="26sp"
+            android:fontFamily="@font/andy_bold"
+            android:text="Search"
+            android:textColor="@color/white"
             android:backgroundTint="#185502"
             />
 
